<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TikTokTech</string>
    <string name="titulo_comentarios">Comentários</string>
    <string name="titulo_login">Entrar</string>
    <string name="titulo_cadastro">Criar conta</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="acao_entrar">Entrar</string>
    <string name="acao_cadastrar">Cadastrar</string>
    <string name="acao_criar_conta">Ainda não tenho uma conta</string>
    <string name="acao_voltar_login">Já tenho uma conta</string>
    <string name="erro_email_invalido">Digite um e-mail válido.</string>
    <string name="erro_senha_curta">A senha deve ter pelo menos 6 caracteres.</string>
    <string name="msg_erro_login">Não foi possível autenticar. Confira seus dados e tente novamente.</string>
    <string name="acao_sair">Sair</string>

    <string name="cloudinary_cloud_name" translatable="false">dikitk54o</string>
    <string name="cloudinary_upload_preset" translatable="false">Tiktoktech</string>
    <string name="cloudinary_folder" translatable="false">tiktoktech_salaE</string>

    <!-- Feed -->
    <string name="feed_vazio">Nenhuma publicação ainda.\nToque na câmera para começar.</string>
    <string name="acao_nova_foto">Nova foto</string>
    <string name="desc_foto_publicacao">Foto da publicação</string>
    <string name="acao_like">Curtir</string>
    <string name="acao_dislike">Não curtir</string>
    <string name="acao_comentar">Comentar</string>
    <string name="acao_voltar">Voltar</string>

    <!-- Nova publicação -->
    <string name="titulo_nova_publicacao">Nova publicação</string>
    <string name="hint_legenda">Escreva uma legenda…</string>
    <string name="acao_publicar">Publicar</string>
    <string name="acao_cancelar">Cancelar</string>
    <string name="dialog_titulo_legenda">Legenda da publicação</string>
    <string name="msg_legenda_vazia">Informe uma legenda antes de publicar.</string>
    <string name="msg_post_salvo">Publicação salva com sucesso!</string>
    <string name="msg_erro_autenticacao">Não foi possível conectar ao Firebase: %1$s</string>

    <!-- Comentários -->
    <string name="sem_comentarios">Seja o primeiro a comentar.</string>
    <string name="hint_seu_nome">Seu nome</string>
    <string name="hint_comentario">Escreva um comentário…</string>
    <string name="autor_anonimo">Anônimo</string>

    <!-- Mensagens -->
    <string name="msg_captura_cancelada">Captura cancelada.</string>
    <string name="msg_sem_foto">Tire uma foto primeiro.</string>
    <string name="msg_publicado">Publicado!</string>
    <string name="msg_comentario_vazio">Escreva um comentário.</string>
    <string name="msg_post_invalido">Publicação não encontrada.</string>
    <string name="msg_erro_upload">Erro ao enviar a imagem: %1$s</string>
    <string name="msg_url_invalida">O envio não retornou uma URL HTTPS.</string>
    <string name="msg_upload_reagendado">Envio aguardando nova tentativa.</string>
    <string name="msg_login_obrigatorio">É necessário estar identificado para realizar esta ação.</string>
    <string name="msg_erro_salvar">Erro ao salvar: %1$s</string>
    <string name="msg_erro_feed">Erro ao carregar o feed: %1$s</string>
    <string name="msg_erro_voto">Erro ao registrar o voto: %1$s</string>
    <string name="msg_erro_comentario">Erro ao comentar: %1$s</string>
</resources>
